--- a/diccionarioPrueba/Base.lproj/Main.storyboard
+++ b/diccionarioPrueba/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OGP-QX-4PH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Hg6-b1-0Ya">
     <device id="ipad10_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0a-Je-hWJ">
-                                <rect key="frame" x="154" y="318" width="67" height="30"/>
+                                <rect key="frame" x="384" y="740" width="67" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Ver Video"/>
                                 <connections>
@@ -34,6 +34,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1694" y="-188"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="bA5-QY-T0a">
+            <objects>
+                <tabBarController id="Hg6-b1-0Ya" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KS8-3j-Dr1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="OGP-QX-4PH" kind="relationship" relationship="viewControllers" id="SXT-WI-je2"/>
+                        <segue destination="guA-lZ-sge" kind="relationship" relationship="viewControllers" id="Avn-pF-aog"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qe7-nw-j3h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-417" y="-1028"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="R3K-SX-WcB">
@@ -98,10 +116,11 @@
             </objects>
             <point key="canvasLocation" x="986" y="-188"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Diccionario-->
         <scene sceneID="9EX-lJ-xeJ">
             <objects>
                 <navigationController id="OGP-QX-4PH" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Diccionario" id="cAw-Rb-Ze2"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HGk-bt-NjB">
                         <rect key="frame" x="0.0" y="20" width="834" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -114,7 +133,7 @@
             </objects>
             <point key="canvasLocation" x="-380" y="-188"/>
         </scene>
-        <!--View Controller Ruleta-->
+        <!--Juegos-->
         <scene sceneID="MTL-OI-gEc">
             <objects>
                 <viewController id="guA-lZ-sge" customClass="ViewControllerRuleta" customModule="diccionarioPrueba" customModuleProvider="target" sceneMemberID="viewController">
@@ -149,6 +168,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="a73-rJ-fVZ"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Juegos" id="uS5-Iz-OKU"/>
                     <connections>
                         <outlet property="lbSelectedGame" destination="eoh-h3-V6x" id="jhd-Ax-ucv"/>
                         <outlet property="pickerView" destination="9UU-3l-2ME" id="dMj-KT-Fph"/>
@@ -156,7 +176,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DHf-1b-WWY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1792.0863309352519" y="-864.38848920863313"/>
+            <point key="canvasLocation" x="309" y="-1028"/>
         </scene>
     </scenes>
 </document>
